ajout des annotations
