# src/Controller/ProductController.php
@@ -2,20 +2,28 @@
 
 namespace App\Controller;
 
+use App\Repository\ProductRepository;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
 use OpenApi\Annotations as OA;
+use FOS\RestBundle\Controller\Annotations as Rest;
 
 class ProductController extends AbstractController
 {
     /**
      * Liste des produits
      * 
+     * @Rest\Get(
+     *     path = "/api/products",
+     *     name = "api_products_liste",
+     * ),
+     * @Rest\View(statusCode= 200),
      * @OA\Get(
      *      path="/products",
+     *      security={"bearer"},
      *      @OA\Parameter(
-     *          name="liste",
+     *          name="liste des produits",
      *          in="query",
      *          description="Le nombre de produits à récupérer",
      *          required=false,
@@ -25,15 +33,22 @@ class ProductController extends AbstractController
      *          response="200",
      *          description="Liste des produits",
      *          @OA\JsonContent(type="array", @OA\Items(ref="#/components/schemas/Product")),
-     *      )
+     *      ),
+     *      @OA\Response(
+     *          response="404",
+     *          description="Not found",
+     *      ),
+     *      @OA\Response(
+     *          response="401",
+     *          description="JWT not found or expired",
+     *      ),
      * )
      */
-    public function list(): Response
+    public function liste(ProductRepository $productRepository): Response
     {
-        return $this->json([
-            'message' => 'Welcome to your new controller!',
-            'path' => 'src/Controller/ProductController.php',
-        ]);
+        $products = $productRepository->findAll();
+
+        return $products;
     }
 
     /**
@@ -52,7 +67,15 @@ class ProductController extends AbstractController
      *          response="200",
      *          description="Détail d'un produit",
      *          @OA\JsonContent(ref="#/components/schemas/Product"),
-     *      )
+     *      ),
+     *      @OA\Response(
+     *          response="404",
+     *          description="Not found",
+     *      ),
+     *      @OA\Response(
+     *          response="401",
+     *          description="JWT not found or expired",
+     *      ),
      * )
      */
     public function details(): Response
